--- a/main.html
+++ b/main.html
@@ -11,6 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div class="heading">
+		<h1><u>This is Heading</u></h1>
+	</div>
 </body>
 
 </html>
