--- a/main.html
+++ b/main.html
@@ -11,9 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<div class="heading">
-		<h1><u>This is Heading</u></h1>
+	<div class="main">
+		<div class="heading" id="heading">
+		<h3><u>This is Heading</u></h3>
+		</div>
 	</div>
+	
 </body>
 
 </html>
